<resources>
  <string name="app_name">CattleSense</string>
  <string name="login">Login</string>
  <string name="welcome_to">Welcome to</string>
  <string name="farm_info">Farm\nInfo</string>
  <string name="cattle_info">Cattle\nInfo</string>
  <string name="cattle_health">Cattle\nHealth</string>
  <string name="search_cattle">Search\nCattle</string>
  <string name="add_farm_info">Add Farm Info</string>
  <string name="farm_overview">Farm Overview</string>
  <string name="expense">Expense</string>
  <string name="income">Income</string>
  <string name="farm_inspection">Farm Inspection\n</string>
  <string name="vaccine_and_deworming_calendar">Vaccine and Deworming Calendar</string>
  <string name="add_new_cattle">Add New Cattle</string>
  <string name="add_cattle">Add Cattle</string>
  <string name="cattle_list">Cattle List\n</string>
  <string name="milk_production">Milk Production</string>
  <string name="weight_tracker">Weight Tracker</string>
  <string name="death_record">Death Record\n</string>
  <string name="heat_notification_alert">Heat Notification Alert</string>
  <string name="heat_info">Heat Info</string>
  <string name="vaccination">Vaccination</string>
  <string name="diseases">Diseases</string>
  <string name="insemination">Insemination</string>
  <string name="insemination_history">Insemination History</string>
  <string name="infected_cattle_list">Infected Cattle List</string>
  <string name="inseminated_cattle_list">Inseminated Cattle List</string>
  <string name="pregnant_cattle_list">Pregnant Cattle List</string>
  <string name="submit">Submit</string>
  <string name="farm_name">Farm Name</string>
  <string name="owner_name">Owner Name</string>
  <string name="owner_nid">Owner NID</string>
  <string name="your_registered_number">Your Registered Number</string>
  <string name="alternative_number">Alternative Number</string>
  <string name="farm_address">Farm Address</string>
  <string name="farm_description">Farm Description</string>
  <string name="no_of_cattle">No of Cattle</string>
  <string name="please_provide_farm_related_information">Please provide farm related information</string>
  <string name="please_provide_expense_related_information">Please provide expense related information</string>
  <string name="please_provide_income_related_information">Please provide income related information</string>
  <string name="please_provide_inspection_related_information">Please provide inspection related information</string>
  <string name="please_provide_milk_production_information">Please provide milk production information</string>
  <string name="please_provide_cattle_fattening_information">Please provide cattle fattening information</string>
  <string name="please_provide_death_record_information">Please provide death record information</string>
  <string name="please_provide_cattle_s_last_heat_information">Please provide cattle\'s last heat information</string>
  <string name="please_provide_vaccine_related_information">Please provide vaccine related information</string>
  <string name="please_provide_disease_related_information">Please provide disease related information</string>
  <string name="please_provide_insemination_related_information">Please provide insemination related information</string>
  <string name="please_provide_cattle_related_information">Please provide cattle related information</string>
  <string name="please_provide_more_cattle_related_information">Please provide more cattle related information</string>
  <string name="date_of_expense">Date of Expense</string>
  <string name="date_of_income">Date of Income</string>
  <string name="category_of_expense">Category of Expense</string>
  <string name="source_of_income">Source of Income</string>
  <string name="amount_spent">Amount Spent</string>
  <string name="payment_method">Payment Method</string>
  <string name="receipt_invoice_number">Receipt/Invoice Number</string>
  <string name="vendor_supplier">Vendor/Supplier</string>
  <string name="additional_notes_or_remarks">Additional notes or remarks</string>
  <string name="invoice_photo">Invoice Photo</string>
  <string name="name_of_the_customer">Name of the customer</string>
  <string name="shade_no">Shade No</string>
  <string name="date_of_inspection">Date of Inspection</string>
  <string name="general_inquiry">General Inquiry</string>
  <string name="roof_and_walls_inquiry">Roof and Walls Inquiry</string>
  <string name="flooring_inquiry">Flooring Inquiry</string>
  <string name="ventilation_inquiry">Ventilation Inquiry</string>
  <string name="lighting_inquiry">Lighting Inquiry</string>
  <string name="safety_measures">Safety Measures</string>
  <string name="inspector_name">Inspector Name</string>
  <string name="cattle_id_autofill_nfc">Cattle ID (Autofill NFC)</string>
  <string name="date">Date</string>
  <string name="milking_cycle_count">Milking Cycle Count</string>
  <string name="milk_production_amount">Milk Production Amount</string>
  <string name="milking_method">Milking Method</string>
  <string name="person_in_charge">Person In-Charge</string>
  <string name="notification_will_be_sent_to_the_farmer_daily">* Notification will be sent to the farmer daily</string>
  <string name="notification_will_be_sent_to_the_authority">* Notification will be sent to the authority</string>
  <string name="a_notification_will_be_sent_to_the_in_charge_after_21_days">* A notification will be sent to the In-Charge after 21 days to heat check</string>
  <string name="notification_will_be_sent_based_on_the_dose">* Notification will be sent based on the dose</string>
  <string name="a_notification_will_be_sent_to_the_in_charge_after_60_days">* A notification will be sent to the In-Charge after 60 days to check the cattle</string>
  <string name="current_live_weight_kg">Current Live Weight (KG)</string>
  <string name="a_to_b">A to B</string>
  <string name="girth_in">Girth (in)</string>
  <string name="length_in">Length (in)</string>
  <string name="calculate">Calculate</string>
  <string name="date_of_death">Date of Death</string>
  <string name="time_of_death">Time of Death</string>
  <string name="cause_of_death">Cause of Death</string>
  <string name="health_history">Health History</string>
  <string name="actions_taken">Actions Taken</string>
  <string name="disposal_method">Disposal Method</string>
  <string name="witnesses">Witnesses</string>
  <string name="approx_loss_amount">Approx. Loss Amount</string>
  <string name="heat_status">Heat Status</string>
  <string name="symptoms">Symptoms</string>
  <string name="date_of_heat">Date of Heat</string>
  <string name="observer_s_name">Observer\'s Name</string>
  <string name="list_of_cattle_vaccines">List of Cattle Vaccines</string>
  <string name="vaccination_method">Vaccination Method</string>
  <string name="vaccination_company">Vaccination Company</string>
  <string name="vaccine_batch_number">Vaccine Batch Number</string>
  <string name="date_of_vaccination">Date of Vaccination</string>
  <string name="vaccinator_s_name">Vaccinator\'s Name</string>
  <string name="list_of_cattle_diseases">List of Cattle Diseases</string>
  <string name="date_of_onset">Date of Onset</string>
  <string name="preventive_measures">Preventive Measures</string>
  <string name="medication">Medication</string>
  <string name="treatment_provider">Treatment Provider</string>
  <string name="change_shade_no">Change Shade No</string>
  <string name="visible_symptom">Visible Symptom</string>
  <string name="insemination_type">Insemination Type</string>
  <string name="insemination_date">Insemination Date</string>
  <string name="ai_technique">AI Technique</string>
  <string name="semen_source">Semen Source</string>
  <string name="semen_batch_bull_number">Semen Batch / Bull Number</string>
  <string name="ai_technician_s_name">AI Technician\'s Name</string>
  <string name="total_cattle">Total Cattle</string>
  <string name="no_of_bulls">No of Bulls</string>
  <string name="no_of_cows">No of Cows</string>
  <string name="no_of_calves">No of Calves</string>
  <string name="no_of_heifers">No of Heifers</string>
  <string name="infected">Infected</string>
  <string name="milk_prod_day">Milk Prod/Day</string>
  <string name="expense_m">Expense/M</string>
  <string name="income_m">Income/M</string>
  <string name="more_information_about_the_farm">More information about the farm</string>
  <string name="owner_name_">Owner Name:</string>
  <string name="address_">Address:</string>
  <string name="contact_no_">Contact No:</string>
  <string name="chart">Chart</string>
  <string name="generate_report">Generate Report</string>
  <string name="report_option">Report Option</string>
  <string name="weekly">Weekly</string>
  <string name="monthly">Monthly</string>
  <string name="yearly">Yearly</string>
  <string name="download_pdf">Download PDF</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="cattle_name">Cattle Name</string>
  <string name="date_of_birth">Date of Birth</string>
  <string name="or">Or</string>
  <string name="year">Year</string>
  <string name="month">Month</string>
  <string name="breed_type">Breed Type</string>
  <string name="gender">Gender</string>
  <string name="date_of_registration">Date of Registration</string>
  <string name="live_weight_kg">Live Weight (KG)</string>
  <string name="cattle_group">Cattle Group</string>
  <string name="cattle_previous_ownership">Cattle Previous Ownership</string>
  <string name="approx_price_during_onbaord">Approx. Price During Onbaord</string>
  <string name="parent_cattle_name">Parent Cattle Name</string>
  <string name="next">Next</string>
  <string name="disease_record">Disease Record</string>
  <string name="vaccination_record">Vaccination Record</string>
  <string name="last_insemination_history">Last Insemination History</string>
  <string name="previous_no_of_calf_birth">Previous No of Calf Birth</string>
  <string name="milk_production_liter_day">Milk Production (Liter/Day)</string>
  <string name="treatment_history">Treatment History</string>
  <string name="medicine_history">Medicine History</string>
  <string name="last_deworming_history">Last Deworming History</string>
  <string name="left">Left</string>
  <string name="front">Front</string>
  <string name="right">Right</string>
  <string name="congratulations">Congratulations!</string>
  <string name="new_cattle_registration_successful">New Cattle Registration Successful</string>
  <string name="cattle_id">Cattle ID</string>
  <string name="write_nfc">Write NFC</string>
  <string name="cattle_n_sense">Cattle\nSense</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
</resources>
