<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.FarmInspectionActivity">

  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

      <TextView
          android:text="@string/please_provide_inspection_related_information"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <EditText
          android:id="@+id/shadeNoEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints="creditCardNumber"
          android:layout_marginTop="8dp"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/shade_no"
          android:inputType="number" />

      <EditText
          android:id="@+id/inspectionDateEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autofillHints="creditCardExpirationDate"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/date_of_inspection"
          android:inputType="date" />

      <EditText
          android:id="@+id/generalInquiryEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autofillHints="name"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/general_inquiry"
          android:inputType="text" />

      <EditText
          android:id="@+id/roofAndWallsEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autofillHints="name"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/roof_and_walls_inquiry"
          android:inputType="text" />

      <EditText
          android:id="@+id/flooringInquiryEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:autofillHints="name"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/flooring_inquiry"
          android:inputType="text" />

      <EditText
          android:id="@+id/ventilationInquiryEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autofillHints="name"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/ventilation_inquiry"
          android:inputType="text" />

      <EditText
          android:id="@+id/lightingInquiryEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autofillHints="name"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/lighting_inquiry"
          android:inputType="text" />

      <EditText
          android:id="@+id/safetyMeasuresEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autofillHints="name"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/safety_measures"
          android:inputType="text" />

      <EditText
          android:id="@+id/inspectorNameEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autofillHints="name"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/inspector_name"
          android:inputType="textPersonName" />

      <EditText
          android:id="@+id/notesEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:autofillHints="name"
          android:drawableStart="@android:drawable/ic_menu_edit"
          android:hint="@string/additional_notes_or_remarks"
          android:inputType="text" />

      <Button
          android:id="@+id/submitButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="16dp"
          android:paddingHorizontal="32dp"
          android:paddingVertical="16dp"
          android:text="@string/submit" />
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
